ARGO-1176 API CALL - Get service(s)
